syntax = "proto3";

package user_api_v1;

option go_package = "pkg/chat_api_v1;chat_api_v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ChatApiV1 {
   rpc Create(CreateRequest) returns (CreateResponse);
   rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
   rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateRequest {
   repeated string usernames = 1;
}

message CreateResponse {
   int64 id = 1;
}

message DeleteRequest {
   int64 id = 1;
}

message SendMessageRequest {
   string from = 1;
   string text = 2;
   google.protobuf.Timestamp timestamp = 3;
}
